--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: IAPSO ECS
 
 # Short description of your site
-description: Physical and chemical oceaongraphy early career scientists
+description: Physical and chemical oceanography early career scientists
 
 # --- Local development options ---
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
@@ -29,7 +29,6 @@ navbar-links:
   Events: "events"
   Newsletter: "newsletter"
   Join: "joinus"
-#  Author's home: "http://deanattali.com"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
