--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ social-network-links:
   github: iapsoecs
   twitter: iapso_ecs
 #  reddit: yourname
-  linkedin: iapso-ecs
+  linkedin: company/iapso-ecs
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
@@ -96,7 +96,7 @@ social-network-links:
 share-links-active:
   twitter: true
   facebook: true
-  linkedin: false
+  linkedin: true
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
