--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ social-network-links:
   github: iapsoecs
   twitter: iapso_ecs
 #  reddit: yourname
-  linkedin: company/iapso-ecs
+  linkedin: iapso-ecs
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
