allow future post

--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,10 @@ title: IAPSO ECS
 # Short description of your site
 description: Physical and chemical oceanography early career scientists
 
+# Allow future posts (needed as github action may run with different date that the person who pushes a job)
+future: true
+
+
 # --- Local development options ---
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
 # *** If you're not sure what this mean, then leave this section as it is. Only modify the url and baseurl if you know what you're doing!***
